# pytest-flakehunter

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build-and-deploy.bat
src/pytest_flakehunter/: ai_analysis.py  history.py  plugin.py  reporter.py
